# rustipo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs-improvement.yml  feature-request.yml
.github/workflows/: ci.yml  docs-site.yml  release-please.yml
Formula/: rustipo.rb
assets/palettes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  default.toml  dracula.toml  gruvbox-dark.toml  tokyonight-moon.toml  tokyonight-storm.toml
assets/themes/atlas/: theme.toml
assets/themes/atlas/static/: landing.js  style.css
assets/themes/atlas/templates/: base.html  index.html  post.html  project.html
assets/themes/atlas/templates/macros/: toc.html
assets/themes/atlas/templates/partials/: head_assets.html
assets/themes/journal/: theme.toml
assets/themes/journal/static/: style.css
assets/themes/journal/templates/: base.html  index.html  post.html  section.html
assets/themes/journal/templates/partials/: head_assets.html
docs/: ci.md  cli.md  content-model.md  implemented-features.md  mvp-checklist.md  project-structure.md  release.md  roadmap.md  tech-debt.md  theme-contract.md  theme-tera.md  v0.4.0-checklist.md
examples/basic-portfolio/: config.toml
examples/basic-portfolio/content/: about.md  index.md  resume.md
examples/basic-portfolio/content/blog/: hello-rustipo.md
examples/basic-portfolio/content/projects/: solar-map.md
examples/basic-portfolio/themes/default/: theme.toml
examples/basic-portfolio/themes/default/static/: style.css
examples/basic-portfolio/themes/default/templates/: base.html  page.html  post.html  section.html
examples/journal/: config.toml
examples/journal/content/: about.md  index.md
examples/journal/content/blog/: a-calendar-for-follow-through.md  notes-from-a-three-page-redesign.md  shipping-with-smaller-tools.md
examples/journal/content/projects/: paper-radio.md  tidal-sketchbook.md
examples/journal/themes/journal/: theme.toml
examples/knowledge-base/: config.toml
examples/knowledge-base/content/: about.md  index.md
examples/knowledge-base/content/guides/: getting-started.md  index.md  publishing-checklist.md
examples/knowledge-base/content/notes/: color-spaces.md  image-pipeline.md  index.md
examples/knowledge-base/themes/atlas/: theme.toml
scripts/: update-homebrew-formula.sh
site/: config.toml
site/content/: index.md  roadmap.md
site/content/examples/: basic-portfolio.md  index.md  journal.md  knowledge-base.md
site/content/guides/: building-the-docs-site.md  contributing.md  deploying-rustipo-sites.md  getting-started.md  index.md  interactive-embeds.md  template-driven-pages.md  theme-authoring.md
site/content/reference/: analytics.md  cli.md  content-model.md  deployment.md  images.md  index.md  publishing-outputs.md  taxonomies.md  template-context.md  themes-and-palettes.md
site/static/: llms.txt
site/static/demos/: counter-demo.css  counter-demo.js
src/: cli.rs  main.rs  taxonomy.rs  url.rs
src/commands/: build.rs  check.rs  deploy.rs  dev.rs  mod.rs  new.rs  palette.rs  serve.rs  site.rs  theme.rs
src/commands/new/: mod.rs  scaffold.rs
src/config/: editor.rs  fonts.rs  mod.rs
src/content/: date.rs  frontmatter.rs  links.rs  loader.rs  markdown.rs  mod.rs  pages.rs  toc.rs
src/content/pages/: builder.rs  mod.rs  model.rs  routing.rs
src/content/shortcodes/: mod.rs  parser.rs  renderer.rs
src/images/: mod.rs  processor.rs
src/output/: assets.rs  mod.rs  not_found.rs  palette.rs  robots.rs  rss.rs  search.rs  sitemap.rs  styles.rs  writer.rs
src/output/rss/: builder.rs  mod.rs  model.rs  writer.rs
src/palette/: contract.rs  loader.rs  mod.rs  models.rs
src/render/: templates.rs
src/render/templates/: archive.rs  context.rs  helpers.rs  mod.rs  not_found.rs  page.rs  section.rs  tags.rs  taxonomy.rs  tests.rs
src/server/: mod.rs
src/theme/: builtin.rs  installer.rs  loader.rs  mod.rs  models.rs
tests/: cli_flow.rs
(+8 files in other folders)
