[package]
name = "rustipo"
version = "0.1.0"
edition = "2024"
description = "Themeable static site generator for portfolio websites"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fcendesu/rustipo"
homepage = "https://github.com/fcendesu/rustipo"
keywords = ["static-site-generator", "portfolio", "markdown", "rust"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gray_matter = "0.3.2"
pulldown-cmark = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
toml = "1.0.6"
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
