[package]
name = "rustipo"
version = "0.7.0"
edition = "2024"
description = "Themeable Markdown-first static site generator for blogs, notes, docs, and personal sites"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fcendesu/rustipo"
homepage = "https://github.com/fcendesu/rustipo"
keywords = ["ssg", "markdown", "blog", "docs", "tera"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "/assets/**",
    "/docs/**",
    "/examples/basic-portfolio/config.toml",
    "/examples/basic-portfolio/content/**",
    "/examples/basic-portfolio/themes/**",
    "/src/**",
    "/tests/**",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gray_matter = "0.3.2"
pulldown-cmark = "0.13.1"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
tera = "1.20.1"
axum = "0.8.8"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
toml = "1.0.6"
toml_edit = "0.23.7"
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
